# rusty-rpg

./: Cargo.toml  README.md  game.bat
binary/: Cargo.toml
binary/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs  resource.rs
engine/src/renderer/: mod.rs  shader.rs  texture.rs
engine/src/resource/: mod.rs
engine/src/time/: mod.rs
resources/shaders/: font.vert  sprite.frag  sprite.vert
