[package]
name = "engine"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
fnv = "1.0.6"
gl = "0.10.0"
glutin = "0.18.0"
image = "0.20.0"
lazy_static = "1.1.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.5.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
serde_yaml = "0.8.7"
strum = "0.11.0"
strum_macros = "0.11.0"