[package]
name = "engine"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
fnv = "1.0.6"
image = "0.20.0"
lazy_static = "1.1.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.5.5"
resource = "0.2.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
serde_yaml = "0.8.7"
spin_sleep = "0.3.7"
strum = "0.11.0"
strum_macros = "0.11.0"
winit = "0.17"
vulkano = "0.10.0"
vulkano-shader-derive = "0.10"
# vulkano-shaders = "0.10.0"
vulkano-win = "0.10.0"